--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
